cabal-version:      3.4
name:               pong
version:            0.1.0.0
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable pong
    import:           warnings
    main-is:          pong.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010
    build-depends: ansi-terminal, sdl2, sdl2-ttf
